// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourTip matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TourTip
    align="center"
    classes={
      Object {
        "down": "down",
        "left": "left",
        "right": "right",
        "tip": "tip",
        "up": "up",
      }
    }
    direction="down"
    target="target"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "tip down",
      "id": undefined,
      "style": Object {},
    },
    "ref": [Function],
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "tip down",
        "id": undefined,
        "style": Object {},
      },
      "ref": [Function],
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`TourTip styles matches the snapshot 1`] = `
Object {
  "down": Object {
    "&:after": Object {
      "borderBottom": "5px solid #1476fb",
      "borderLeft": "5px solid transparent",
      "borderRight": "5px solid transparent",
      "bottom": "100%",
      "left": "50%",
      "transform": "translateX(-50%)",
    },
  },
  "left": Object {
    "&:after": Object {
      "borderBottom": "5px solid transparent",
      "borderLeft": "5px solid #1476fb",
      "borderTop": "5px solid transparent",
      "left": "100%",
      "top": "50%",
      "transform": "translateY(-50%)",
    },
  },
  "right": Object {
    "&:after": Object {
      "borderBottom": "5px solid transparent",
      "borderRight": "5px solid #1476fb",
      "borderTop": "5px solid transparent",
      "right": "100%",
      "top": "50%",
      "transform": "translateY(-50%)",
    },
  },
  "tip": Object {
    "&:after": Object {
      "content": "\\"\\"",
      "display": "block",
      "position": "absolute",
    },
    "alignItems": "center",
    "background": "#1476fb",
    "borderRadius": "3px",
    "boxShadow": "0 12px 9px -5px rgba(0,0,0,0.12), 0 10px 32px 0 rgba(0,29,124,0.12)",
    "boxSizing": "border-box",
    "color": "#ffffff",
    "display": "flex",
    "fontFamily": "'Nunito Sans', sans-serif",
    "fontSize": "12px",
    "height": "40px",
    "left": "0",
    "padding": "0 15px",
    "position": "absolute",
    "top": "0",
    "transition": "0.3s all",
    "whiteSpace": "nowrap",
    "zIndex": "10",
  },
  "up": Object {
    "&:after": Object {
      "borderLeft": "5px solid transparent",
      "borderRight": "5px solid transparent",
      "borderTop": "5px solid #1476fb",
      "left": "50%",
      "top": "100%",
      "transform": "translateX(-50%)",
    },
  },
}
`;

exports[`TourTipJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(TourTip)
    align="center"
    direction="down"
    target="target"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "classes": Object {
        "down": "TourTip-down-0-1-4",
        "left": "TourTip-left-0-1-3",
        "right": "TourTip-right-0-1-2",
        "tip": "TourTip-tip-0-1-1",
        "up": "TourTip-up-0-1-5",
      },
      "direction": "down",
      "target": "target",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "classes": Object {
          "down": "TourTip-down-0-1-4",
          "left": "TourTip-left-0-1-3",
          "right": "TourTip-right-0-1-2",
          "tip": "TourTip-tip-0-1-1",
          "up": "TourTip-up-0-1-5",
        },
        "direction": "down",
        "target": "target",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
